# polyagentic-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  agents.py  app.py  graph.py  main.py  prompts.py  pyproject.toml  requirements.txt
docs/: api_design.md  high_level_design.md  low_level_design.md
tests/: test_agents.py  test_graph.py  test_tools.py
ui/: sidebar.py  state.py  stream_handler.py  style.py
