[project]
name = "multi-agent-ai-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.27.2",
    "langchain>=0.3.20,<0.4.0",
    "langchain-community==0.3.5",
    "langchain-tavily==0.2.0",
    "langchain-groq",
    "langgraph==0.2.45",
    "python-dotenv==1.0.1",
    "streamlit==1.39.0",
    "tavily-python==0.5.0",
    "langchain-ollama",
]
